# grc-20

./: .gitignore  AGENTS.md  readme.md  reasoning.md  requirements.md  spec.md
.claude/: settings.local.json
.github/workflows/: rust.yml  typescript.yml
docs/: requirements.md
rust/: Cargo.toml  README.md
rust/crates/grc-20/: Cargo.toml
rust/crates/grc-20-bench/: Cargo.toml
rust/crates/grc-20-bench/src/: main.rs
rust/crates/grc-20-compare/src/: main.rs
rust/crates/grc-20-proto-bench/: Cargo.toml  build.rs
rust/crates/grc-20-proto-bench/src/: grc20.proto  main.rs
rust/crates/grc-20/examples/: decode_file.rs
rust/crates/grc-20/src/: error.rs  lib.rs
rust/crates/grc-20/src/codec/: edit.rs  mod.rs  op.rs  primitives.rs  value.rs
rust/crates/grc-20/src/model/: builder.rs  edit.rs  id.rs  mod.rs  op.rs  value.rs
rust/crates/grc-20/src/util/: datetime.rs  mod.rs
rust/crates/grc-20/src/validate/: mod.rs
typescript/: CHANGELOG.md  package-lock.json  package.json  readme.md
typescript/.changeset/: validate-id-length.md
typescript/src/: index.ts
typescript/src/builder/: edit.ts  entity.ts  index.ts  relation.ts  update-relation.ts  update.ts
typescript/src/codec/: edit.ts  index.ts  op.ts  primitives.ts  value.ts
typescript/src/ops/: index.ts
typescript/src/test/: basic.test.ts
typescript/src/types/: edit.ts  op.ts  value.ts
typescript/src/util/: datetime.ts  index.ts
