[package]
name = "grc-20-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
grc-20 = { path = "../grc-20" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7"] }

[[bin]]
name = "bench-countries"
path = "src/main.rs"
