[package]
name = "grc-20-proto-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7"] }
zstd = "0.13"

[build-dependencies]
prost-build = "0.13"

[[bin]]
name = "bench-countries-proto"
path = "src/main.rs"
