[package]
name = "grc-20"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "GRC-20 v2 binary property graph format for decentralized knowledge networks"
keywords = ["grc20", "knowledge-graph", "binary-format", "decentralized"]
categories = ["encoding", "data-structures"]

[dependencies]
thiserror.workspace = true
zstd.workspace = true
sha2.workspace = true
uuid.workspace = true
lazy_static.workspace = true
rustc-hash = "2"

[dev-dependencies]
proptest.workspace = true

[features]
default = []
